[tool.poetry]
name = "swagger"
version = "0.1.0"
description = "SWAGGER: Sparse WAypoint Graph Generation for Efficient Routing"
authors = []
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
colorlog= "*"
cucim-cu12 = "*"
fastapi= "*"
fastapi-versioning= "*"
h11= "*"
httpx= "*"
networkx= "*"
numba= "*"
numpy= "*"
numpydantic= "*"
opencv-python= "*"
psutil= "*"
pydantic= "*"
python-multipart= "*"
rtree= "*"
scikit-image= "*"
scipy= "*"
setuptools= "*"
skan= "*"
tyro= "*"
uvicorn= "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
